<resources>
    <string name="app_name">GeetaGyaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">The Bhagavad Gita, also known as the Gita, is a 700-verse Hindu scripture that is part of the Mahabharata epic. The Gita is set in the Kurukshetra battlefield, and tells the story of a conversation between the warrior prince .</string>
    <string name="InternetConnectionNotice">No Internet connection \n Check saved chapters in Setting</string>
    <string name="views">Views</string>
    <string name="shree_bhagawat_geeta">Shree Bhagawat Geeta!</string>
    <string name="_1_6">||1.6||</string>
    <string name="_1_1">धृतराष्ट्र उवाच धर्मक्षेत्रे कुरुक्षेत्रे समवेता युयुत्सवः। मामकाः पाण्डवाश्चैव किमकुर्वत सञ्जय।।1.1।।</string>
    <string name="verse_of_the_day">Verse of the day</string>
</resources>