<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".views.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/kalash" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shree_bhagawat_geeta"
                android:textColor="#ff0000"
                android:textSize="@dimen/_18sdp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/kalash" />
        </LinearLayout>

        <ImageView
            android:id="@+id/settingIcon"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/chakra"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="0dp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginHorizontal="@dimen/_3sdp"
        android:elevation="2dp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clGita">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvShowingVerse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verse_of_the_day"
                android:textColor="@color/orange"
                android:layout_gravity="center"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVerseOfDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cvBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".2"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/rk" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/chapters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Chapters"
        android:letterSpacing=".1"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chapters">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/shimmer_layout_bg" />

                <include layout="@layout/shimmer_layout_bg" />

                <include layout="@layout/shimmer_layout_bg" />
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChapters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:visibility="visible"
            tools:listitem="@layout/item_view_chapter" />
    </LinearLayout>

    <ImageView
        android:id="@+id/internetNoticeImage"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/no_internet"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/internetNotice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/internetNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/InternetConnectionNotice"
        android:textColor="@color/orange"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll" />

<!--    <TextView-->
<!--        android:id="@+id/internetNotice"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:text="No Internet connection \n Check saved chapters in Setting"-->
<!--        android:textColor="@color/orange"-->
<!--        android:textSize="@dimen/_18sdp"-->
<!--        android:textStyle="bold"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/ll"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@+id/clGita"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/clGita" />-->

</androidx.constraintlayout.widget.ConstraintLayout>